aligns leaderboard correctly

--- a/src/components/start-page/start-page.css
+++ b/src/components/start-page/start-page.css
@@ -55,6 +55,7 @@ Button {
   border-color: white;
   border-style: solid;
   border-radius: 10px;
+  color: white;
 }
 
 .leaderboard-container {
@@ -72,7 +73,7 @@ Button {
 }
 
 .leaderboard {
-  padding-left: 50%;
+  padding-left: 5%;
   color: white;
 }
 p {
